# vizfold-foundation

./: .gitignore  DEMO.md  README.md  environment-aarch64.yml  environment.yml  environment_boltz.yml  esmfold-tracing.patch  extract_esmfold.py  format_vizfold.py  install.sh  representation_tensor_utils.py  run_pretrained_openfold.py  run_viz.py  visualize_attention_arc_diagram_demo_utils.py  visualize_attention_heatmap_grid.py  visualize_attention_heatmap_utils.py  viz_attention_demo_base.ipynb  web_interface.py
.streamlit/: config.toml
ViTtransformers/: ARCHIVE_SPEC.md  environment.yml  model.py  train.py  visualize.py  zarr_archive.py
archive/: archive.md  environment.yml  openfold_sweep_to_zarr.py  openfold_zarr_archive.py  test_metadata.py  vizfold_to_zarr.py
backends/esmfold/: pyproject.toml  requirements.txt  run_pretrained_esmf.py
backends/esmfold/esmfold/: __init__.py  inference.py  trace_adapter.py
backends/esmfold/install/: install.sh
backends/esmfold/scripts/hpc/ice/: run_esmf_ice.slurm
backends/esmfold/tests/: test_esmf_smoke.py
boltz_trace/: sitecustomize.py
candidate_format_comparison/: archiveformat.py
cli/: Cargo.toml  USAGE.md  generate_feature_dict_cli.py  run_pretrained_openfold_cli.py
docs/: esmfold.md  esmfold_backend_repro.md  esmfold_tracing.md  hpc_ice.md
install/: config.sh  esmfold.sh  hpc.sh  init.sh  interactive.sh  setup.sh  slurm.sh  slurm::launch_args
installationGuide/: README.md  install.ipynb  install.py  install.sh
lib/: config.sh
notebooks/: intermediate_rep_viz.py  viz_plot_demo.ipynb
run/: fold.sh  (+1 more)
(+246 files in other folders)
